--- a/.github/workflows/FrontEnd.yml
+++ b/.github/workflows/FrontEnd.yml
@@ -17,7 +17,10 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 14.x
-        
+
+    - name: Install Dependencies
+      run: npm install
+
     - name: Generate Project Build
       run: npm run build 
     
