--- a/.github/workflows/FrontEnd.yml
+++ b/.github/workflows/FrontEnd.yml
@@ -21,6 +21,9 @@ jobs:
     - name: Install Dependencies
       run: npm install
 
+    - name: Test Application
+      run: npm run test
+
     - name: Generate Project Build
       run: npm run build 
     
